--- a/sentiment1.ipynb
+++ b/sentiment1.ipynb
@@ -40,33 +40,37 @@
       "metadata": {
         "id": "3P3TqltkLqwY",
         "colab_type": "code",
-        "outputId": "130ed66b-9b34-41d1-a23c-97a63d57c2de",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "## Mount Google Drive for easy and fast read/write access to data folder \n",
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n",
+        "#datapath = \"/content/drive/My Drive/Colab Notebooks/data/\""
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wypdv6lqGayG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# For demonstration purposes, pull data from webserver instead\n",
+        "datapath = \"http://priebe.onl/data/\""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fjSMhJiV9h_Q",
         "colab_type": "code",
-        "outputId": "543bb950-5454-4758-f448-5a41126c5b7a",
+        "outputId": "cdbd0022-78df-4904-8a7a-99d15cedddb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -75,12 +79,12 @@
       "source": [
         "import pandas as pd  \n",
         "\n",
-        "df = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/data/training.csv\",header=None,\n",
+        "df = pd.read_csv(datapath+\"/training.csv\",header=None,\n",
         "                 usecols=[0,5],names=['sentiment','text'],encoding='latin1')\n",
         "df['sentiment'] = df['sentiment'].map({0: 0, 4: 1})\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +154,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 8
         }
       ]
     },
@@ -346,32 +350,14 @@
       "metadata": {
         "id": "geo_NMobUWTK",
         "colab_type": "code",
-        "outputId": "31076711-ce18-4b8e-b3a4-d328ed25945c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
-        }
+        "colab": {}
       },
       "source": [
-        "clean_df.to_csv('/content/drive/My Drive/Colab Notebooks/data/training_cleaned.csv',encoding='utf-8',index=False)\n",
-        "clean_df.info()"
+        "#clean_df.to_csv(datapath+'/training_cleaned.csv',encoding='utf-8',index=False)\n",
+        "#clean_df.info()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 1596041 entries, 0 to 1596040\n",
-            "Data columns (total 2 columns):\n",
-            "text         1596041 non-null object\n",
-            "sentiment    1596041 non-null int64\n",
-            "dtypes: int64(1), object(1)\n",
-            "memory usage: 24.4+ MB\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
