--- a/sentiment1.ipynb
+++ b/sentiment1.ipynb
@@ -79,12 +79,12 @@
       "source": [
         "import pandas as pd  \n",
         "\n",
-        "df = pd.read_csv(datapath+\"/training.csv\",header=None,\n",
+        "df = pd.read_csv(datapath+\"training.csv\",header=None,\n",
         "                 usecols=[0,5],names=['sentiment','text'],encoding='latin1')\n",
         "df['sentiment'] = df['sentiment'].map({0: 0, 4: 1})\n",
         "df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +353,7 @@
         "colab": {}
       },
       "source": [
-        "#clean_df.to_csv(datapath+'/training_cleaned.csv',encoding='utf-8',index=False)\n",
+        "#clean_df.to_csv(datapath+'training_cleaned.csv',encoding='utf-8',index=False)\n",
         "#clean_df.info()"
       ],
       "execution_count": 0,
