--- a/sentiment5.ipynb
+++ b/sentiment5.ipynb
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "XS6U-bPwlvdI",
         "colab_type": "code",
-        "outputId": "ef1d9130-2aba-41cc-d3a6-1082fb18070d",
+        "outputId": "fcae95b0-ec67-495c-d202-cd5e9fe1cd03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -94,7 +94,7 @@
         "df = pd.read_csv(datapath+\"brexit_sentiment.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 10
         }
       ]
     },
@@ -187,16 +187,17 @@
       "metadata": {
         "id": "Jr7J-yMr4_lZ",
         "colab_type": "code",
-        "outputId": "5e43f71a-807d-461d-f114-e510f22d14b3",
+        "outputId": "383c4024-643d-4214-af07-fc05a91158f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 481
+          "height": 355
         }
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "\n",
+        "pd.plotting.register_matplotlib_converters()\n",
         "df['created'] = pd.to_datetime(df['created'])\n",
         "\n",
         "print(\"Total number of tweets is {0} entries\".format(len(df)))\n",
@@ -204,7 +205,7 @@
         "plt.figure(figsize=(20,5))\n",
         "plt.plot_date(df_grouped.index, df_grouped['sentiment'], fmt='-')"
       ],
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,28 +215,16 @@
           "name": "stdout"
         },
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas/plotting/_matplotlib/converter.py:103: FutureWarning: Using an implicitly registered datetime converter for a matplotlib plotting method. The converter was registered by pandas on import. Future versions of pandas will require you to explicitly register matplotlib converters.\n",
-            "\n",
-            "To register the converters:\n",
-            "\t>>> from pandas.plotting import register_matplotlib_converters\n",
-            "\t>>> register_matplotlib_converters()\n",
-            "  warnings.warn(msg, FutureWarning)\n"
-          ],
-          "name": "stderr"
-        },
-        {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f5cfc6c2710>]"
+              "[<matplotlib.lines.Line2D at 0x7f5cf8a03e80>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -256,7 +245,7 @@
       "metadata": {
         "id": "7spebGInI2D7",
         "colab_type": "code",
-        "outputId": "a01487c2-d834-4f21-de31-4f8d2dabbba8",
+        "outputId": "ee178086-d761-4f9b-ecbb-6a8ff990383d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
@@ -275,7 +264,7 @@
         "plt.plot_date(df_leave_grouped.index, df_leave_grouped['sentiment'], fmt='-')\n",
         "plt.plot_date(df_remain_grouped.index, df_remain_grouped['sentiment'], fmt='-')"
       ],
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,13 +278,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f5cfc13c4a8>]"
+              "[<matplotlib.lines.Line2D at 0x7f5cf89e4f60>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
