--- a/sentiment2.ipynb
+++ b/sentiment2.ipynb
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "XmG6B57YSC9m",
         "colab_type": "code",
-        "outputId": "a5efcdbb-ad3f-45d8-e886-6c7bb2ecdf2b",
+        "outputId": "50dd1743-756a-4e07-febf-c2fb46787912",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -83,7 +83,7 @@
         "df = pd.read_csv(datapath+\"training_cleaned.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "VY_iFq1aVIS3",
         "colab_type": "code",
-        "outputId": "5608d3b4-c5f1-4de1-e048-78824e5fc6e5",
+        "outputId": "1dcae0f7-8000-4853-b992-9d3a2ba2af92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -191,7 +191,7 @@
         "                                                                                        (len(x_test[y_test == 0]) / (len(x_test)*1.))*100,\n",
         "                                                                                        (len(x_test[y_test == 1]) / (len(x_test)*1.))*100))"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "eVtaoofuWdwc",
         "colab_type": "code",
-        "outputId": "378a80d9-3b2c-498a-fb35-b22a00c0412d",
+        "outputId": "0fcb52e6-7b46-4235-ccb3-f6f42730e781",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
@@ -220,7 +220,7 @@
         "tvec = TfidfVectorizer(max_features=100000,ngram_range=(1, 3))\n",
         "tvec.fit(x_train)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 4
         }
       ]
     },
@@ -353,7 +353,7 @@
       "source": [
         "from joblib import dump, load\n",
         "\n",
-        "#dump(tvec, datapath+\"tvec.pickle\")\n",
+        "#dump(tvec, datapath+\"tvec.pkl\")\n",
         "#model.save(datapath+\"model.h5\")"
       ],
       "execution_count": 0,
