--- a/sentiment4.ipynb
+++ b/sentiment4.ipynb
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "XS6U-bPwlvdI",
         "colab_type": "code",
-        "outputId": "6239533c-a71e-4664-c6d6-8b64a27e0163",
+        "outputId": "6bd96205-5d89-4037-881e-cb8a71a93a47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -82,7 +82,7 @@
         "df = pd.read_csv(datapath+\"brexit_cleaned.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 17
         }
       ]
     },
@@ -175,31 +175,16 @@
       "metadata": {
         "id": "JijTrPSRhvjW",
         "colab_type": "code",
-        "outputId": "7251e0ba-1fdb-429f-d7dd-dea9d070d19d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 107
-        }
+        "colab": {}
       },
       "source": [
         "from joblib import dump, load\n",
         "from urllib.request import urlopen\n",
         "\n",
-        "tvec = load(urlopen(datapath+\"tvec.pickle\")) "
+        "tvec = load(urlopen(datapath+\"tvec.pkl\")) "
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator TfidfTransformer from version 0.21.3 when using version 0.22.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
-            "  UserWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator TfidfVectorizer from version 0.21.3 when using version 0.22.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
-            "  UserWarning)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -236,16 +221,16 @@
       "metadata": {
         "id": "2oBFQ7EHncfh",
         "colab_type": "code",
+        "outputId": "70e1d662-1dda-4d5c-9843-7a7120647f8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "70e1d662-1dda-4d5c-9843-7a7120647f8f"
+        }
       },
       "source": [
         "y_predict = model.predict(x_predict_tfidf, batch_size=128, verbose=1)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,11 +246,11 @@
       "metadata": {
         "id": "mMisgFy1psKy",
         "colab_type": "code",
+        "outputId": "ca7425eb-fc9f-49f0-a52b-096f3ccffe40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "ca7425eb-fc9f-49f0-a52b-096f3ccffe40"
+        }
       },
       "source": [
         "df_predict = pd.DataFrame(y_predict,columns=['sentiment'])\n",
@@ -275,7 +260,7 @@
         "\n",
         "df_predict.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,17 +353,17 @@
       "metadata": {
         "id": "GrHFyJqH110N",
         "colab_type": "code",
+        "outputId": "4755237f-8171-4d45-cbff-f3b602063880",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        },
-        "outputId": "4755237f-8171-4d45-cbff-f3b602063880"
+        }
       },
       "source": [
         "#df_predict.to_csv(datapath+'brexit_sentiment.csv',encoding='utf-8',index=False)\n",
         "df_predict.info()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
