--- a/sentiment1.ipynb
+++ b/sentiment1.ipynb
@@ -79,6 +79,8 @@
       "source": [
         "import pandas as pd  \n",
         "\n",
+        "# Load Sentiment140 training data set, choose only relevant columns and encode \n",
+        "# positive sentiment as 1 instead of 4\n",
         "df = pd.read_csv(datapath+\"training.csv\",header=None,\n",
         "                 usecols=[0,5],names=['sentiment','text'],encoding='latin1')\n",
         "df['sentiment'] = df['sentiment'].map({0: 0, 4: 1})\n",
@@ -166,6 +168,8 @@
         "colab": {}
       },
       "source": [
+        "# This code is 1:1 as presented by Ricky Kim, please refer to:\n",
+        "# https://towardsdatascience.com/another-twitter-sentiment-analysis-bb5b01ebad90\n",
         "import re\n",
         "from bs4 import BeautifulSoup\n",
         "from nltk.tokenize import WordPunctTokenizer\n",
@@ -353,6 +357,8 @@
         "colab": {}
       },
       "source": [
+        "## Store cleaned training data as CSV file, does not apply when using webserver\n",
+        "## as storage location\n",
         "#clean_df.to_csv(datapath+'training_cleaned.csv',encoding='utf-8',index=False)\n",
         "#clean_df.info()"
       ],
