--- a/sentiment1.ipynb
+++ b/sentiment1.ipynb
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "fjSMhJiV9h_Q",
         "colab_type": "code",
-        "outputId": "cdbd0022-78df-4904-8a7a-99d15cedddb4",
+        "outputId": "45522e6a-0acf-4ae2-c0ec-114e6656b8a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -86,7 +86,7 @@
         "df['sentiment'] = df['sentiment'].map({0: 0, 4: 1})\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "tdpYh2NP-FRR",
         "colab_type": "code",
-        "outputId": "8599497d-a19c-4a8d-b3ac-4d5b813079ec",
+        "outputId": "26bbaf31-92ae-4dc0-86fc-9de6f7ec1c9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 369
@@ -224,7 +224,7 @@
         "        print(\"Tweets %d of %d has been processed\" % (i+1, len(df)))                                                               \n",
         "    clean_tweet_texts.append(tweet_cleaner_updated(df['text'][i]))"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,8 +247,8 @@
             "Tweets 1400000 of 1600000 has been processed\n",
             "Tweets 1500000 of 1600000 has been processed\n",
             "Tweets 1600000 of 1600000 has been processed\n",
-            "CPU times: user 7min 22s, sys: 27.3 s, total: 7min 50s\n",
-            "Wall time: 7min 50s\n"
+            "CPU times: user 7min 44s, sys: 25.1 s, total: 8min 9s\n",
+            "Wall time: 8min 10s\n"
           ],
           "name": "stdout"
         }
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "4S8tgNnO-4SD",
         "colab_type": "code",
-        "outputId": "5149ae90-1b99-49e5-efcf-197c8815d9c6",
+        "outputId": "c8a7c578-8170-4a5f-d788-e0313154b532",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -275,7 +275,7 @@
         "\n",
         "clean_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -354,16 +354,34 @@
       "metadata": {
         "id": "geo_NMobUWTK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "outputId": "2b8dd699-9c37-4f9e-e6f8-ec66369c0556"
       },
       "source": [
         "## Store cleaned training data as CSV file, does not apply when using webserver\n",
         "## as storage location\n",
         "#clean_df.to_csv(datapath+'training_cleaned.csv',encoding='utf-8',index=False)\n",
-        "#clean_df.info()"
+        "clean_df.info()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1596041 entries, 0 to 1596040\n",
+            "Data columns (total 2 columns):\n",
+            "text         1596041 non-null object\n",
+            "sentiment    1596041 non-null int64\n",
+            "dtypes: int64(1), object(1)\n",
+            "memory usage: 24.4+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
