--- a/sentiment1.ipynb
+++ b/sentiment1.ipynb
@@ -43,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "## Mount Google Drive for easy and fast read/write access to data folder \n",
+        "# Mount Google Drive for easy and fast read/write access to data folder \n",
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
         "#datapath = \"/content/drive/My Drive/Colab Notebooks/data/\""
@@ -86,7 +86,7 @@
         "df['sentiment'] = df['sentiment'].map({0: 0, 4: 1})\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +224,7 @@
         "        print(\"Tweets %d of %d has been processed\" % (i+1, len(df)))                                                               \n",
         "    clean_tweet_texts.append(tweet_cleaner_updated(df['text'][i]))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "\n",
         "clean_df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,19 +354,19 @@
       "metadata": {
         "id": "geo_NMobUWTK",
         "colab_type": "code",
+        "outputId": "2b8dd699-9c37-4f9e-e6f8-ec66369c0556",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 140
-        },
-        "outputId": "2b8dd699-9c37-4f9e-e6f8-ec66369c0556"
+        }
       },
       "source": [
-        "## Store cleaned training data as CSV file, does not apply when using webserver\n",
-        "## as storage location\n",
+        "# Store cleaned training data as CSV file, does not apply when using webserver\n",
+        "# as storage location\n",
         "#clean_df.to_csv(datapath+'training_cleaned.csv',encoding='utf-8',index=False)\n",
         "clean_df.info()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
