--- a/sentiment2.ipynb
+++ b/sentiment2.ipynb
@@ -33,7 +33,7 @@
       },
       "source": [
         "# Twitter-Sentimentanalyse Teil 2\n",
-        "## Erlernen eines NN-Klassifikators mit Kera und TensorFlow"
+        "## Erlernen eines NN-Klassifikators mit Keras und TensorFlow"
       ]
     },
     {
@@ -44,7 +44,7 @@
         "colab": {}
       },
       "source": [
-        "## Mount Google Drive for easy and fast read/write access to data folder \n",
+        "# Mount Google Drive for easy and fast read/write access to data folder \n",
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
         "#datapath = \"/content/drive/My Drive/Colab Notebooks/data/\""
@@ -80,10 +80,11 @@
       "source": [
         "import pandas as pd  \n",
         "\n",
+        "# Load cleaned Sentiment140 training dataset\n",
         "df = pd.read_csv(datapath+\"training_cleaned.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,6 +179,7 @@
         "## Use only 1% sample for demonstration purposes\n",
         "#_, x, _, y = train_test_split(x, y, test_size=.01, random_state=seed)\n",
         "\n",
+        "# Split data into validation, test and training dataset\n",
         "x_train, x_validation_test, y_train, y_validation_test = train_test_split(x, y, test_size=.02, random_state=seed)\n",
         "x_validation, x_test, y_validation, y_test = train_test_split(x_validation_test, y_validation_test, test_size=.5, random_state=seed)\n",
         "\n",
@@ -191,7 +193,7 @@
         "                                                                                        (len(x_test[y_test == 0]) / (len(x_test)*1.))*100,\n",
         "                                                                                        (len(x_test[y_test == 1]) / (len(x_test)*1.))*100))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +222,7 @@
         "tvec = TfidfVectorizer(max_features=100000,ngram_range=(1, 3))\n",
         "tvec.fit(x_train)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,6 +355,7 @@
       "source": [
         "from joblib import dump, load\n",
         "\n",
+        "# Save TF-IDF vectorizer (as Python pickle) and Keras model\n",
         "#dump(tvec, datapath+\"tvec.pkl\")\n",
         "#model.save(datapath+\"model.h5\")"
       ],
