--- a/sentiment3.ipynb
+++ b/sentiment3.ipynb
@@ -43,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "## Mount Google Drive for easy and fast read/write access to data folder \n",
+        "# Mount Google Drive for easy and fast read/write access to data folder \n",
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
         "#datapath = \"/content/drive/My Drive/Colab Notebooks/data/\""
@@ -79,10 +79,11 @@
       "source": [
         "import pandas as pd  \n",
         "\n",
+        "# Load Brexit tweets from CSV file, filter on relevant columns\n",
         "df = pd.read_csv(datapath+\"brexit.csv\",usecols=[0,1,3,11])\n",
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,6 +215,8 @@
         "colab": {}
       },
       "source": [
+        "# This code is 1:1 as presented by Ricky Kim, please refer to:\n",
+        "# https://towardsdatascience.com/another-twitter-sentiment-analysis-bb5b01ebad90\n",
         "import re\n",
         "from bs4 import BeautifulSoup\n",
         "from nltk.tokenize import WordPunctTokenizer\n",
@@ -415,6 +418,8 @@
         }
       },
       "source": [
+        "# Store cleaned training data as CSV file, does not apply when using webserver\n",
+        "# as storage location\n",
         "#clean_df.to_csv(datapath+'brexit_cleaned.csv',encoding='utf-8',index=False)\n",
         "clean_df.info()"
       ],
