--- a/sentiment3.ipynb
+++ b/sentiment3.ipynb
@@ -418,8 +418,8 @@
         }
       },
       "source": [
-        "# Store cleaned training data as CSV file, does not apply when using webserver\n",
-        "# as storage location\n",
+        "# Store cleaned data as CSV file, does not apply when using webserver as storage \n",
+        "# location\n",
         "#clean_df.to_csv(datapath+'brexit_cleaned.csv',encoding='utf-8',index=False)\n",
         "clean_df.info()"
       ],
