--- a/sentiment4.ipynb
+++ b/sentiment4.ipynb
@@ -43,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "## Mount Google Drive for easy and fast read/write access to data folder \n",
+        "# Mount Google Drive for easy and fast read/write access to data folder \n",
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
         "#datapath = \"/content/drive/My Drive/Colab Notebooks/data/\""
@@ -79,10 +79,11 @@
       "source": [
         "import pandas as pd  \n",
         "\n",
+        "# Load cleaned Brexit tweets from CSV file\n",
         "df = pd.read_csv(datapath+\"brexit_cleaned.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,6 +182,8 @@
         "from joblib import dump, load\n",
         "from urllib.request import urlopen\n",
         "\n",
+        "# Load TF-IDF vectorizer (urlopen needed when taking from webserver)\n",
+        "#tvec = load(datapath+\"tvec.pkl\") \n",
         "tvec = load(urlopen(datapath+\"tvec.pkl\")) "
       ],
       "execution_count": 0,
@@ -197,6 +200,8 @@
         "%tensorflow_version 1.x\n",
         "from keras.models import load_model\n",
         "\n",
+        "# Load Keras model (urlopen needed when taking from webserver)\n",
+        "#model = load_model(datapath+\"model.h5\")\n",
         "model = load_model(urlopen(datapath+\"model.h5\"))"
       ],
       "execution_count": 0,
@@ -228,6 +233,7 @@
         }
       },
       "source": [
+        "# Apply model and calculate sentiment\n",
         "y_predict = model.predict(x_predict_tfidf, batch_size=128, verbose=1)"
       ],
       "execution_count": 0,
@@ -360,6 +366,8 @@
         }
       },
       "source": [
+        "# Store resulting dataset with sentiment to CSV file, does not apply when\n",
+        "# using webserver storage\n",
         "#df_predict.to_csv(datapath+'brexit_sentiment.csv',encoding='utf-8',index=False)\n",
         "df_predict.info()"
       ],
