--- a/sentiment5.ipynb
+++ b/sentiment5.ipynb
@@ -43,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "## Mount Google Drive for easy and fast read/write access to data folder \n",
+        "# Mount Google Drive for easy and fast read/write access to data folder \n",
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
         "#datapath = \"/content/drive/My Drive/Colab Notebooks/data/\""
@@ -91,10 +91,11 @@
         }
       },
       "source": [
+        "# Load resulting dataset of Brexit tweets with sentiment \n",
         "df = pd.read_csv(datapath+\"brexit_sentiment.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,15 +198,17 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "\n",
+        "# Register datetime converter and convert created column\n",
         "pd.plotting.register_matplotlib_converters()\n",
         "df['created'] = pd.to_datetime(df['created'])\n",
         "\n",
         "print(\"Total number of tweets is {0} entries\".format(len(df)))\n",
+        "# Aggregate data by calculating average sentiment per day and visualize\n",
         "df_grouped = df[['created','sentiment']].set_index('created').groupby(pd.Grouper(freq='D')).mean()\n",
         "plt.figure(figsize=(20,5))\n",
         "plt.plot_date(df_grouped.index, df_grouped['sentiment'], fmt='-')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,19 +255,22 @@
         }
       },
       "source": [
+        "# Calculate subset of tweets with \"pro-leave\" hashtags\n",
         "df_leave = df.loc[df['hashtags'].str.contains('leave|takecontrol|voteout') & ~df['hashtags'].str.contains('remain|strongerin|votein')]\n",
         "print(\"Subset of tweets with 'remain' hashtags {0} entries\".format(len(df_leave)))\n",
         "df_leave_grouped = df_leave[['created','sentiment']].set_index('created').groupby(pd.Grouper(freq='D')).mean()\n",
         "\n",
+        "# Calculate subset of tweets with \"pro-remain\" hashtags\n",
         "df_remain = df.loc[df['hashtags'].str.contains('remain|strongerin|votein') & ~df['hashtags'].str.contains('leave|takecontrol|voteout')]\n",
         "print(\"Subset of tweets with 'leave' hashtags {0} entries\".format(len(df_remain)))\n",
         "df_remain_grouped = df_remain[['created','sentiment']].set_index('created').groupby(pd.Grouper(freq='D')).mean()\n",
         "\n",
+        "# Visualize both subsets in one graph\n",
         "plt.figure(figsize=(20,5))\n",
         "plt.plot_date(df_leave_grouped.index, df_leave_grouped['sentiment'], fmt='-')\n",
         "plt.plot_date(df_remain_grouped.index, df_remain_grouped['sentiment'], fmt='-')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
