--- a/sentiment2.ipynb
+++ b/sentiment2.ipynb
@@ -181,17 +181,18 @@
         "\n",
         "# Split data into validation, test and training dataset\n",
         "x_train, x_validation_test, y_train, y_validation_test = train_test_split(x, y, test_size=.02, random_state=seed)\n",
-        "x_validation, x_test, y_validation, y_test = train_test_split(x_validation_test, y_validation_test, test_size=.5, random_state=seed)\n",
+        "x_validation, x_test, y_validation, y_test = train_test_split(x_validation_test, y_validation_test, test_size=.5, \n",
+        "                                                              random_state=seed)\n",
         "\n",
-        "print(\"Train set has total {0} entries with {1:.2f}% negative, {2:.2f}% positive\".format(len(x_train),\n",
-        "                                                                                         (len(x_train[y_train == 0]) / (len(x_train)*1.))*100,\n",
-        "                                                                                         (len(x_train[y_train == 1]) / (len(x_train)*1.))*100))\n",
-        "print(\"Validation set has total {0} entries with {1:.2f}% negative, {2:.2f}% positive\".format(len(x_validation),\n",
-        "                                                                                              (len(x_validation[y_validation == 0]) / (len(x_validation)*1.))*100,\n",
-        "                                                                                              (len(x_validation[y_validation == 1]) / (len(x_validation)*1.))*100))\n",
-        "print(\"Test set has total {0} entries with {1:.2f}% negative, {2:.2f}% positive\".format(len(x_test),\n",
-        "                                                                                        (len(x_test[y_test == 0]) / (len(x_test)*1.))*100,\n",
-        "                                                                                        (len(x_test[y_test == 1]) / (len(x_test)*1.))*100))"
+        "print(\"Train set has total {0} entries with {1:.2f}% negative, {2:.2f}% positive\".\n",
+        "      format(len(x_train), (len(x_train[y_train == 0]) / (len(x_train)*1.))*100,\n",
+        "             (len(x_train[y_train == 1]) / (len(x_train)*1.))*100))\n",
+        "print(\"Validation set has total {0} entries with {1:.2f}% negative, {2:.2f}% positive\".\n",
+        "      format(len(x_validation), (len(x_validation[y_validation == 0]) / (len(x_validation)*1.))*100,\n",
+        "             (len(x_validation[y_validation == 1]) / (len(x_validation)*1.))*100))\n",
+        "print(\"Test set has total {0} entries with {1:.2f}% negative, {2:.2f}% positive\".\n",
+        "      format(len(x_test), (len(x_test[y_test == 0]) / (len(x_test)*1.))*100,\n",
+        "             (len(x_test[y_test == 1]) / (len(x_test)*1.))*100))"
       ],
       "execution_count": 0,
       "outputs": [
