--- a/spark_sentiment.ipynb
+++ b/spark_sentiment.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Twitter-Sentimentanalyse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -26,6 +33,7 @@
     }
    ],
    "source": [
+    "# Load (pre-cleaned) Sentiment140 training data set\n",
     "rdd = sc.textFile(\"/user/cloudera/sentiment/training_cleaned.csv\")\n",
     "\n",
     "header = rdd.first()\n",
@@ -60,6 +68,7 @@
     }
    ],
    "source": [
+    "# Convert to Spark dataframe\n",
     "from pyspark.sql.types import *\n",
     "\n",
     "schema = StructType([\n",
@@ -97,6 +106,7 @@
     }
    ],
    "source": [
+    "# Prepare training data using TF-IDF encoding\n",
     "from pyspark.ml.feature import HashingTF, IDF, Tokenizer\n",
     "\n",
     "tokenizer = Tokenizer(inputCol=\"text\", outputCol=\"words\")\n",
@@ -138,11 +148,8 @@
    },
    "outputs": [],
    "source": [
-    "[trainingData, testData] = rescaledData.randomSplit([0.95, 0.05], seed = 2000)\n",
-    "#[trainingData, testData] = rescaledData.randomSplit([0.96, 0.04], seed = 2000)\n",
-    "#[trainingData, testData] = rescaledData.randomSplit([0.97, 0.03], seed = 2000)\n",
-    "#[trainingData, testData] = rescaledData.randomSplit([0.98, 0.02], seed = 2000)\n",
-    "#[trainingData, testData] = rescaledData.randomSplit([0.99, 0.01], seed = 2000)"
+    "# Split into training and test dataset\n",
+    "[trainingData, testData] = rescaledData.randomSplit([0.95, 0.05], seed = 2000)"
    ]
   },
   {
@@ -153,6 +160,7 @@
    },
    "outputs": [],
    "source": [
+    "# Model using classic logistic regression\n",
     "from pyspark.ml.classification import LogisticRegression\n",
     "\n",
     "lr = LogisticRegression()\n",
@@ -195,6 +203,7 @@
     }
    ],
    "source": [
+    "# Apply model to test dataset\n",
     "testPredictions = lrModel.transform(testData)\n",
     "testPredictions.show(5)"
    ]
@@ -215,6 +224,7 @@
     }
    ],
    "source": [
+    "# Compute accuracy on test data\n",
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
     "\n",
     "evaluator = MulticlassClassificationEvaluator(\n",
@@ -273,6 +283,7 @@
     }
    ],
    "source": [
+    "# Load (pre-cleaned) Brexit dataset\n",
     "rdd = sc.textFile(\"/user/cloudera/sentiment/brexit_cleaned.csv\")\n",
     "\n",
     "header = rdd.first()\n",
@@ -307,6 +318,7 @@
     }
    ],
    "source": [
+    "# Convert to Spark dataframe\n",
     "brexitSchema = StructType([\n",
     "    StructField(\"text\", StringType(), False), \n",
     "    StructField(\"id\", StringType(), False),\n",
@@ -343,6 +355,7 @@
     }
    ],
    "source": [
+    "# Encode Brexit dataset using TF-IDF\n",
     "brexitWordsData = tokenizer.transform(brexitData)\n",
     "brexitFeaturizedData = hashingTF.transform(brexitWordsData)\n",
     "brexitRescaledData = idfModel.transform(brexitFeaturizedData)\n",
@@ -383,6 +396,7 @@
     }
    ],
    "source": [
+    "# Apply model to Brexit data\n",
     "brexitPredictions = lrModel.transform(brexitRescaledData)\n",
     "brexitPredictions.show(5)"
    ]
@@ -413,13 +427,12 @@
     }
    ],
    "source": [
+    "# Extract probability of positive sentiment\n",
     "from pyspark.sql.functions import udf\n",
     "\n",
     "brexitPredictions = brexitPredictions.withColumn(\"created\", brexitPredictions['created'].cast(TimestampType()))\n",
     "\n",
-    "firstelement = udf(lambda v:float(v[0]),FloatType())\n",
     "secondelement = udf(lambda v:float(v[1]),FloatType())\n",
-    "#brexitSentiment = brexitPredictions.select('id', 'created', 'prediction', 'hashtags')\n",
     "brexitSentiment = brexitPredictions.select('id', 'created', secondelement('probability'), 'hashtags')\n",
     "brexitSentiment = brexitSentiment.withColumnRenamed(brexitSentiment.schema.names[2], 'sentiment')\n",
     "brexitSentiment.show(5)"
@@ -451,6 +464,7 @@
     }
    ],
    "source": [
+    "# Prepare for visualization using Spark SQL\n",
     "brexitSentiment.registerTempTable('brexit_sentiment2')\n",
     "brexitSentiment.cache()\n",
     "df1 = sqlContext.sql(\"SELECT to_date(created) created_date, avg(sentiment) sentiment FROM brexit_sentiment2 GROUP BY to_date(created)\")\n",
@@ -513,6 +527,7 @@
    },
    "outputs": [],
    "source": [
+    "# Extract only tweets with \"Leave\" hashtags\n",
     "sql = (\"SELECT to_date(created) created_date, avg(sentiment) sentiment FROM brexit_sentiment2 \"\n",
     "       \"WHERE (hashtags like '%leave%' OR hashtags like '%takecontrol%' or hashtags like '%voteout%') \"\n",
     "       \"AND NOT (hashtags like '%remain%' OR hashtags like '%strongerin%' or hashtags like '%votein%') \"\n",
@@ -529,6 +544,7 @@
    },
    "outputs": [],
    "source": [
+    "# Extract only tweets with \"Remain\" hashtags \n",
     "sql = (\"SELECT to_date(created) created_date, avg(sentiment) sentiment FROM brexit_sentiment2 \"\n",
     "       \"WHERE (hashtags like '%remain%' OR hashtags like '%strongerin%' or hashtags like '%votein%') \"\n",
     "       \"AND NOT (hashtags like '%leave%' OR hashtags like '%takecontrol%' or hashtags like '%voteout%') \"\n",
